--- a/index.ipynb
+++ b/index.ipynb
@@ -73,9 +73,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You Code Here"
+    "# You Code Here\n",
+    "import requests\n",
+    "resp = requests.get('http://api.open-notify.org/iss-now.json')\n",
+    "resp.status_code == requests.codes.ok"
    ]
   },
   {
@@ -96,11 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"timestamp\": 1559964452, \"message\": \"success\", \"iss_position\": {\"longitude\": \"77.4403\", \"latitude\": \"-23.9815\"}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# You Code Here"
+    "# You Code Here\n",
+    "print (resp.text)"
    ]
   },
   {
@@ -109,7 +132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret your results using the API"
+    "# Interpret your results using the API\n",
+    "# ISS is at \"longitude\": \"77.4403\", \"latitude\": \"-23.9815\""
    ]
   },
   {
@@ -128,11 +152,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You Code Here"
+    "# You Code Here\n",
+    "resp = requests.get('http://api.open-notify.org/iss-pass.json')\n",
+    "resp.status_code == requests.codes.ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"message\": \"failure\", \n",
+      "  \"reason\": \"Latitude must be specified\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (resp.text)"
    ]
   },
   {
@@ -168,11 +226,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You Code Here"
+    "# You Code Here\n",
+    "NY = {'lat': '40.71', 'lon': '-74'}  \n",
+    "r = requests.get('http://api.open-notify.org/iss-pass.json', params=NY)\n",
+    "r.status_code == requests.codes.ok\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Connection': 'keep-alive',\n",
+       " 'Content-Length': '519',\n",
+       " 'Content-Type': 'application/json',\n",
+       " 'Date': 'Sat, 08 Jun 2019 03:50:16 GMT',\n",
+       " 'Server': 'nginx/1.10.3',\n",
+       " 'Via': '1.1 vegur'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(r.headers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"message\": \"success\", \n",
+      "  \"request\": {\n",
+      "    \"altitude\": 100, \n",
+      "    \"datetime\": 1559964932, \n",
+      "    \"latitude\": 40.71, \n",
+      "    \"longitude\": -74.0, \n",
+      "    \"passes\": 5\n",
+      "  }, \n",
+      "  \"response\": [\n",
+      "    {\n",
+      "      \"duration\": 544, \n",
+      "      \"risetime\": 1560009880\n",
+      "    }, \n",
+      "    {\n",
+      "      \"duration\": 644, \n",
+      "      \"risetime\": 1560015606\n",
+      "    }, \n",
+      "    {\n",
+      "      \"duration\": 585, \n",
+      "      \"risetime\": 1560021465\n",
+      "    }, \n",
+      "    {\n",
+      "      \"duration\": 555, \n",
+      "      \"risetime\": 1560027342\n",
+      "    }, \n",
+      "    {\n",
+      "      \"duration\": 621, \n",
+      "      \"risetime\": 1560033160\n",
+      "    }\n",
+      "  ]\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r.text)"
    ]
   },
   {
@@ -181,7 +327,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check the API and interpret your results - when will ISS pass over NEW York next ?"
+    "# Check the API and interpret your results - when will ISS pass over NEW York next ?\n",
+    "# "
    ]
   },
   {
@@ -201,11 +348,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You Code Here"
+    "# You Code Here\n",
+    "res = requests.get('http://api.open-notify.org/astros.json')\n",
+    "res.status_code == requests.codes.ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Connection': 'keep-alive',\n",
+       " 'Content-Length': '311',\n",
+       " 'Content-Type': 'application/json',\n",
+       " 'Date': 'Sat, 08 Jun 2019 03:53:45 GMT',\n",
+       " 'Server': 'nginx/1.10.3',\n",
+       " 'access-control-allow-origin': '*'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(res.headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"message\": \"success\", \"number\": 6, \"people\": [{\"craft\": \"ISS\", \"name\": \"Oleg Kononenko\"}, {\"craft\": \"ISS\", \"name\": \"David Saint-Jacques\"}, {\"craft\": \"ISS\", \"name\": \"Anne McClain\"}, {\"craft\": \"ISS\", \"name\": \"Alexey Ovchinin\"}, {\"craft\": \"ISS\", \"name\": \"Nick Hague\"}, {\"craft\": \"ISS\", \"name\": \"Christina Koch\"}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'craft': 'ISS', 'name': 'Oleg Kononenko'}, {'craft': 'ISS', 'name': 'David Saint-Jacques'}, {'craft': 'ISS', 'name': 'Anne McClain'}, {'craft': 'ISS', 'name': 'Alexey Ovchinin'}, {'craft': 'ISS', 'name': 'Nick Hague'}, {'craft': 'ISS', 'name': 'Christina Koch'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "resp = res.json()\n",
+    "print(resp['people'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oleg Kononenko\n",
+      "David Saint-Jacques\n",
+      "Anne McClain\n",
+      "Alexey Ovchinin\n",
+      "Nick Hague\n",
+      "Christina Koch\n"
+     ]
+    }
+   ],
+   "source": [
+    "for people in resp['people']:\n",
+    "    print(people['name'])\n"
    ]
   },
   {
@@ -214,7 +457,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the Results - How many people are in space and what are their names "
+    "# Interpret the Results - How many people are in space and what are their names \n",
+    "# 6\n",
+    "#Oleg Kononenko, David Saint-Jacques, Anne McClain, Alexey Ovchinin, Nick Hague, Christina Koch"
    ]
   },
   {
